fix scroll behavior on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,7 @@ nav ul li a:hover {
 
 
  .project-item:hover img {
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.447);
     transform: scale(1.1);
     transition: transform 0.3s ease; 
     filter: brightness(140%);
@@ -162,7 +162,6 @@ text-align: center;
         transform: scale(1.1);
         filter: brightness(140%);
         position: relative;
-        filter: drop-shadow(0px 0px 10px #5ca3ffb2);
     }
 
     .project-item:hover .hover-text {
@@ -182,6 +181,7 @@ text-align: center;
     .hover-text {
         visibility: visible;
     }
+
     .social-links img{
         filter: drop-shadow(0px 0px 6px #5a95e3a8);  
     }
@@ -251,10 +251,12 @@ h4.animation-finished::after {
     }
 
     .project-item img {
-        
         margin: 0 auto;
         max-width: 85%; 
+    }
 
+    .hover-text {
+        font-size: 1.7em;
     }
 
     header{
